--- a/css/styles.css
+++ b/css/styles.css
@@ -1,96 +1,33 @@
 body {
   margin: 0;
   font-size: 16px;
-  font-family: Verdana, sans-serif;
+  font-family: fantasy, fantasy;
   color: #333;
+	background-color: #fff2e6;
 }
-a {
-	color: white;
-}
-header{
-	width: 100%;
+header {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: #000;
-	color: #FFFFFF;
-	text-align: right;
-	padding: 30px 0 30px 0;
+	color: #fff2e6;
+	padding: 10px 0 10px 0;
 	font-size: 20px;
-	margin: 0 0 30px 0;
 }
-header .title{
-	text-align: left;
+header img{
+	height: 45px;
 }
-main {
+
+header a{
+display: none;
+}
+.topview {
+	display: flex;
+	justify-content:space-around;
+}
+.topview img{
 	width: 100%;
-  margin: 0 auto;
 }
-
-img {
-  vertical-align: bottom;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-#main {
-	width: 100%;
-  margin-bottom: 8px;
-  margin-top: 8px;
-}
-
-nav {
-  margin-bottom: 8px;
-}
-
-nav ul {
-  display: flex;
-  justify-content: space-between;
-}
-
-nav li {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 12px;
-  padding: 4px;
-  text-align: center;
-  cursor: pointer;
-  user-select: none;
-}
-
-nav li:hover {
-  background: #f8f8f8;
-}
-
-#play {
-  width: 200px;
-}
-
-#next,
-#prev {
-  width: 100px;
-}
-
-.thumbnails {
-  display: grid;
-  grid-template-columns: repeat(4, 20%);
-  gap: 1%;
-  margin-left: 1%;
-}
-
-.thumbnails li {
-  cursor: pointer;
-  opacity: 0.4;
-}
-
-.thumbnails li:hover,
-.thumbnails li.current {
-  opacity: 1;
-}
-
-.thumbnails img {
-  width: 100%;}
 
 .features img {
   width: 100%;
@@ -117,8 +54,17 @@ nav li:hover {
   padding-bottom: 64px;
 }
 
+.lake{
+	display: none;
+}
+.lake_gyaku {
+	display: none;
+	margin: 0;
+	padding: 0;
+}
 .members {
-  background: #f2f2f3;
+  background: #A69D95;
+	color: #000;
 }
 
 .members > h1 {
@@ -134,7 +80,7 @@ nav li:hover {
   padding: 0;
 }
 
-.members img {
+.members li img {
   width: 250px;
   border-radius: 50%;
 	margin: 0 auto;
@@ -163,89 +109,36 @@ nav li:hover {
 .call-to-action .btn {
   margin: 0 auto;
 }
-
 footer {
   padding: 64px 0;
-  background: #323135;
+  background: #000;
   color: #98969c;
   text-align: center;
 }
-
 @media (min-width: 900px) {
+
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #000;
+	color: #fff2e6;
+	padding: 10px 0 10px 0;
+	font-size: 20px;
+	}
+header a{
+	display: inline;
+	color: #fff2e6;
+	text-decoration: none;
+	border-left: 1px solid #fff2e6;
+	padding: 0 10vw;
+}
+
+.topview img{
+	width: 70%;
+}
+
 	
-main {
-  width: 800px;
-  margin: 0 auto;
-}
-
-img {
-  vertical-align: bottom;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-#main {
-  width: 800px;
-  height: 600px;
-  margin-bottom: 8px;
-  margin-top: 8px;
-}
-
-nav {
-  margin-bottom: 8px;
-}
-
-nav ul {
-  display: flex;
-  justify-content: space-between;
-}
-
-nav li {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 12px;
-  padding: 4px;
-  text-align: center;
-  cursor: pointer;
-  user-select: none;
-}
-
-nav li:hover {
-  background: #f8f8f8;
-}
-
-#play {
-  width: 200px;
-}
-
-#next,
-#prev {
-  width: 100px;
-}
-
-.thumbnails {
-  display: grid;
-  grid-template-columns: repeat(4,95px);
-  gap: 5px;
-}
-
-.thumbnails li {
-  cursor: pointer;
-  opacity: 0.4;
-}
-
-.thumbnails li:hover,
-.thumbnails li.current {
-  opacity: 1;
-}
-
-.thumbnails img {
-  width: 80px;
-}
   .features .container {
     width: 800px;
     margin: 0 auto;
@@ -268,6 +161,30 @@ nav li:hover {
     width: calc(50% - 32px);
   }
 
+.lake{
+	display: flex;
+	justify-content: flex-end;
+	align-items: baseline;
+	height: 200px;
+}
+	
+.lake_gyaku{
+	display: flex;
+	justify-content: flex-end;
+	height: 200px;
+	opacity: 15%;
+	}
+.lake_l{
+	height: 200px;
+	
+}
+.lake_l img{
+	height: 100px;
+}
+.lake_r img{
+	height: 200px;
+}
+	
   .members ul {
     width: 800px;
     margin: 0 auto;
@@ -278,4 +195,7 @@ nav li:hover {
   .members li {
     width: 250px;
   }
+.members > h1{
+		margin: -190px 0 0 0;
+	}
 }
